# fastapi-boilerplate-generator

./: DEPLOYMENT.md  Makefile  README.md  USAGE.md  bash.sh  cli.py  fastapi-generator.sh  plan.md  pyproject.toml  setup.py  setup.sh
config/: default.conf
generators/: api.sh  auth.sh  core.sh  docker.sh  docs.sh  mfa.sh  middleware.sh  models.sh  redis.sh  tests.sh  utils.sh
utils/: color.sh  helpers.sh
